orbit is not straight

--- a/index.html
+++ b/index.html
@@ -1,52 +1,65 @@
+<!---
+* Cytonn Technologies
+* @author Ndirangu Wilson <wndirangu@Cytonn.com>
+--->
+
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>Quantum physics</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<head>
+  <title>Quantum physics</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <link rel="stylesheet" type="text/css" media="screen,projection" href="main.css" />
+  <link rel="stylesheet" type="text/css" media="screen,projection" href="main.css" />
 
+</head>
 
-  </head>
-
-  <body>
+<body>
 
   <div class="wrap clearfix">
 
     <section>
-        <header class="clearfix">
-            <h1>Quantum Physics</h1>
-            <p>Motion of an electron round a nucleus</p>
+      <header class="clearfix">
+        <h1>Quantum Physics</h1>
+        <p>Motion of an electron round a nucleus</p>
 
-        </header>
+      </header>
     </section>
 
     <section class="clearfix">
 
-        <ul class="quantum">
-          <li class="atom"><a href="#atom"><span>The Atom</span></a></li>
-          <li class="first"><a href="#first"><span>First Energy level</span></a></li>
-          <li class="second"><a href="#second"><span>Second energy level</span></a></li>
+      <ul class="quantum">
+        <li class="atom"><a href="#atom"><span>The Atom</span></a></li>
+        <li class="first"><a href="#first"><span>First Energy level</span></a></li>
+        <li class="second"><a href="#second"><span>Second energy level</span></a></li>
 
+      </ul>
 
-        </ul>
+      <ul id="descriptions">
+        <li>
+          <h2 id="atom">Atom </h2>
+          <p>
+            The smallest component of an element having the chemical properties of the element, consisting of a nucleus containing combinations of neutrons and protons and one or more electrons bound to the nucleus by electrical attraction; the number of protons
+            determines the identity of the element.
+          </p>
+        </li>
 
-        <ul id="descriptions">
-          <li><h2 id="atom">Atom </h2>
-            <p>
-            The smallest component of an element having the chemical properties of the element, consisting of a nucleus containing combinations of neutrons and protons and one or more electrons bound to the nucleus by electrical attraction; the number of protons determines the identity of the element.
-          </p></li>
+        <li>
+          <h2 id="first">1<sup>st</sup> energy level</h2>
+          <p>
+            The first energy level can hold up to two electrons in an orbital called the 1s orbital. The first energy level has the lowest energy and is closest to the nucleus.
+          </p>
+        </li>
 
-            <li><h2 id="first">1 <sup>st</sup> energy level</h2> <p>
-              The first energy level can hold up to two electrons in an orbital called the 1s orbital.  The first energy level has the lowest energy and is closest to the nucleus.
-            </p></li>
+        <li>
+          <h2 id="Second"> 2<sup>nd</sup> energy level</h2>
+          <p>
+            The second energy level can hold up to eight electrons in orbitals. These orbitals are called the 2s, 2px, 2py and 2pz orbitals.
+          </p>
+          </h2>
+        </li>
 
-              <li><h2 id="Second"> 2 <sup>nd</sup> energy level</h2><p>
-                The second energy level can hold up to eight electrons in orbitals.  These orbitals are called the 2s, 2px, 2py and 2pz orbitals.
-              </p></h2></li>
-
-        </ul>
+      </ul>
 
     </section>
 
@@ -54,5 +67,6 @@
 
   </div>
 
-  </body>
-  </html>
+</body>
+
+</html>
