--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
 
-  <div class="wrap clearfix">
+  <div class="wrap ">
 
     <section>
-      <header class="clearfix">
+      <header>
         <h1>Quantum Physics</h1>
         <p>Motion of an electron round a nucleus</p>
 
@@ -35,24 +35,24 @@
 
       </ul>
 
-      <ul id="descriptions">
+      <ul class="descriptions">
         <li>
-          <h2 id="atom">Atom </h2>
+          <h2 class="atom">Atom </h2>
           <p>
             The smallest component of an element having the chemical properties of the element, consisting of a nucleus containing combinations of neutrons and protons and one or more electrons bound to the nucleus by electrical attraction; the number of protons
-            determines the identity of the element.
+            determines the classentity of the element.
           </p>
         </li>
 
         <li>
-          <h2 id="first">1<sup>st</sup> energy level</h2>
+          <h2 class="first">1<sup>st</sup> energy level</h2>
           <p>
             The first energy level can hold up to two electrons in an orbital called the 1s orbital. The first energy level has the lowest energy and is closest to the nucleus.
           </p>
         </li>
 
         <li>
-          <h2 id="Second"> 2<sup>nd</sup> energy level</h2>
+          <h2 class="Second"> 2<sup>nd</sup> energy level</h2>
           <p>
             The second energy level can hold up to eight electrons in orbitals. These orbitals are called the 2s, 2px, 2py and 2pz orbitals.
           </p>
